--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/mpotra/dom-slim/issues"
   },
-  "homepage": "https://github.com/mpotra/dom-slim#readme"
+  "homepage": "https://github.com/mpotra/dom-slim#readme",
+  "dependencies": {
+    "xml-name-validator": "^3.0.0"
+  }
 }
