--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slim Document Object Model Implementation",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": ""
   },
   "repository": {
     "type": "git",
